--- a/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
@@ -32,7 +32,7 @@
       background: $background-gray;
     }
 
-    &.selected {
+    &.jse-selected {
       background: $dark-gray;
       color: white;
     }
