--- a/src/lib/components/controls/navigationBar/NavigationBarItem.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarItem.scss
@@ -30,7 +30,7 @@
       line-height: $font-size-mono - 8px;
       padding: $padding-half $padding;
 
-      &.open {
+      &.jse-open {
         background: $white;
       }
     }
