--- a/src/lib/components/modals/CopyPasteModal.scss
+++ b/src/lib/components/modals/CopyPasteModal.scss
@@ -1,15 +1,15 @@
 @import '../../styles';
 @import 'Modal';
 
-.jsoneditor-modal.copy-paste {
-  .shortcuts {
+.jse-jsoneditor-modal.copy-paste {
+  .jse-shortcuts {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 2 * $padding 0;
 
-    .shortcut {
-      .key {
+    .jse-shortcut {
+      .jse-key {
         font-size: 200%;
         color: $theme-color;
       }
