--- a/src/lib/components/modes/treemode/contextmenu/ContextMenuButton.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenuButton.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles';
 
-.context-menu-button {
+.jse-context-menu-button {
   $context-menu-button-size-half: 0.5 * $context-menu-button-size;
 
   position: absolute;
