--- a/src/lib/plugins/value/components/BooleanToggle.scss
+++ b/src/lib/plugins/value/components/BooleanToggle.scss
@@ -1,6 +1,6 @@
 @import '../../../styles';
 
-.boolean-toggle {
+.jse-boolean-toggle {
   color: $value-color-boolean;
   position: relative;
   display: flex;
