--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -1,7 +1,7 @@
 @import '../styles';
 @import 'modes/treemode/json-node-selected-mixin.scss';
 
-.jsoneditor-main {
+.jse-main {
   width: 100%;
   height: 100%;
   min-width: 0;
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
 
-  &.focus {
+  &.jsefocus {
     box-shadow: $outline-shadow;
   }
 }
