--- a/src/lib/components/controls/EditableDivShared.scss
+++ b/src/lib/components/controls/EditableDivShared.scss
@@ -1,33 +1,33 @@
 @import '../../styles';
 
-.value {
-  &.string {
+.jse-value {
+  &.jse-string {
     color: $value-color-string;
   }
 
-  &.object,
-  &.array {
+  &.jse-object,
+  &.jse-array {
     min-width: 16px;
     color: $meta-color;
   }
 
-  &.number {
+  &.jse-number {
     color: $value-color-number;
   }
 
-  &.boolean {
+  &.jse-boolean {
     color: $value-color-boolean;
   }
 
-  &.null {
+  &.jse-null {
     color: $value-color-null;
   }
 
-  &.invalid {
+  &.jse-invalid {
     color: $black;
   }
 
-  &.url {
+  &.jse-url {
     color: $value-color-url;
     text-decoration: underline;
   }
