--- a/src/lib/components/controls/ValidationErrorsOverview.scss
+++ b/src/lib/components/controls/ValidationErrorsOverview.scss
@@ -1,6 +1,6 @@
 @import '../../styles.scss';
 
-.validation-errors-overview {
+.jse-validation-errors-overview {
   font-family: $font-family-mono;
   font-size: $font-size-mono;
   background: $warning-color;
@@ -23,17 +23,17 @@
         padding: 4px $padding;
         vertical-align: middle;
 
-        &.validation-error-icon {
+        &.jse-validation-error-icon {
           width: 36px;
           box-sizing: border-box;
         }
 
-        &.validation-error-action {
+        &.jse-validation-error-action {
           width: 36px;
           box-sizing: border-box;
           padding: 0;
 
-          button.validation-errors-collapse {
+          button.jse-validation-errors-collapse {
             @include jsoneditor-button;
 
             width: 36px;
@@ -46,7 +46,7 @@
           }
         }
 
-        div.validation-errors-expand {
+        div.jse-validation-errors-expand {
           display: inline-block;
           position: relative;
           top: 3px;
