--- a/src/lib/components/modals/Header.scss
+++ b/src/lib/components/modals/Header.scss
@@ -1,11 +1,11 @@
 @import '../../styles';
 
-.header {
+.jse-header {
   display: flex;
   background: $theme-color;
   color: $white;
 
-  .title {
+  .jse-title {
     flex: 1;
     padding: $input-padding;
     vertical-align: middle;
