--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -1,8 +1,8 @@
 @import '../../styles';
 @import 'Modal';
 
-.jsoneditor-modal.transform {
-  .contents {
+.jse-modal.jse-transform {
+  .jse-contents {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
     min-height: 0;
     padding: 0;
 
-    .main-contents {
+    .jse-main-contents {
       flex: 1;
       display: flex;
       gap: 2 * $padding;
@@ -21,12 +21,12 @@
       padding-top: 0;
       padding-bottom: $padding;
 
-      .query-contents {
+      .jse-query-contents {
         flex: 1;
         display: flex;
         flex-direction: column;
 
-        .description {
+        .jse-description {
           color: $dark-gray;
 
           :global(p) {
@@ -48,32 +48,32 @@
           }
         }
 
-        textarea.query {
+        textarea.jse-query {
           flex: 1;
           outline: none;
           resize: vertical; // prevent resizing horizontally
         }
       }
 
-      .data-contents {
+      .jse-data-contents {
         flex: 1;
         display: flex;
         flex-direction: column;
         gap: 2 * $padding;
 
-        .original-data {
+        .jse-original-data {
           flex: 1;
           display: flex;
           flex-direction: column;
           min-height: 0;
           box-sizing: border-box;
 
-          &.hide {
+          &.jse-hide {
             flex: none;
           }
         }
 
-        .preview-data {
+        .jse-preview-data {
           flex: 1;
           display: flex;
           flex-direction: column;
@@ -81,7 +81,7 @@
           box-sizing: border-box;
         }
 
-        &.hide-original-data {
+        &.jse-hide-original-data {
           flex-direction: column;
           gap: 0;
           margin-bottom: 0;
@@ -89,25 +89,25 @@
       }
     }
 
-    .actions {
+    .jse-actions {
       padding: 2 * $padding;
       padding-top: $padding;
     }
 
     @media screen and (max-width: 1200px) {
-      .main-contents {
+      .jse-main-contents {
         flex-direction: column;
         overflow: auto;
 
-        .query-contents {
-          textarea.query {
+        .jse-query-contents {
+          textarea.jse-query {
             min-height: 150px;
             flex: none;
           }
         }
 
-        .data-contents {
-          :global(.tree-mode) {
+        .jse-data-contents {
+          :global(.jse-tree-mode) {
             height: 300px;
             flex: none;
           }
@@ -116,12 +116,12 @@
     }
   }
 
-  .label {
+  .jse-label {
     font-weight: bold;
     display: block;
     box-sizing: border-box;
 
-    .label-inner {
+    .jse-label-inner {
       margin-top: $padding * 2;
       margin-bottom: $padding-half;
       box-sizing: border-box;
@@ -134,14 +134,14 @@
     }
   }
 
-  :global(.tree-mode) {
+  :global(.jse-tree-mode) {
     flex: 1;
     border: 1px solid $background-gray;
     box-shadow: none;
     box-sizing: border-box;
   }
 
-  :global(.tree-mode.focus) {
+  :global(.jse-tree-mode.jse-focus) {
     border: 1px solid $theme-color;
   }
 
@@ -164,7 +164,7 @@
     }
   }
 
-  .preview.error {
+  .jse-preview.jse-error {
     flex: 1;
     border: 1px solid $background-gray;
     color: $red;
