--- a/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles.scss';
 
-.jsoneditor-contextmenu {
+.jse-contextmenu {
   box-shadow: $box-shadow;
 
   font-family: $font-family;
@@ -18,13 +18,13 @@
     }
   }
 
-  .row {
+  .jse-row {
     display: flex;
     flex-direction: row;
     align-items: start;
     justify-content: stretch;
 
-    div.label {
+    div.jse-label {
       flex: 1;
       white-space: nowrap;
       padding: $padding;
@@ -46,7 +46,7 @@
         background: unset;
       }
 
-      .insert {
+      .jse-insert {
         $size: 18px;
 
         display: inline-block;
@@ -57,8 +57,8 @@
         font-family: $font-family-mono;
         font-weight: bold;
 
-        .quote,
-        .plus {
+        .jse-quote,
+        .jse-plus {
           position: absolute;
           top: -4px;
           left: 2px;
@@ -68,7 +68,7 @@
     }
   }
 
-  .column {
+  .jse-column {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -84,7 +84,7 @@
     }
   }
 
-  .separator {
+  .jse-separator {
     width: 100%;
     height: 1px;
     background: $gray-highlight;
