--- a/src/lib/components/controls/navigationBar/NavigationBar.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBar.scss
@@ -3,8 +3,8 @@
 .jse-navigation-bar {
   font-family: $font-family-mono;
   font-size: $font-size-mono;
-  background: $very-light-gray;
-  color: $dark-gray;
+  background: var(--jse-panel-background-color);
+  color: var(--jse-panel-text-color);
   padding: 0;
   margin: 0;
   display: flex;
@@ -13,6 +13,6 @@
   .jse-navigation-bar-empty {
     line-height: $font-size-mono;
     padding: $padding-half $padding;
-    color: $light-gray;
+    color: var(--jse-panel-text-color-readonly);
   }
 }
