--- a/src/lib/components/controls/navigationBar/NavigationBarItem.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarItem.scss
@@ -10,7 +10,7 @@
     padding: $padding-half 2px;
     border: none;
     background: transparent;
-    color: $dark-gray;
+    color: inherit;
     cursor: pointer;
     outline: none;
     min-width: 24px;
