--- a/src/lib/components/modals/CopyPasteModal.scss
+++ b/src/lib/components/modals/CopyPasteModal.scss
@@ -1,7 +1,7 @@
 @import '../../styles';
 @import 'Modal';
 
-.jse-jsoneditor-modal.copy-paste {
+.jse-modal.jse-copy-paste {
   .jse-shortcuts {
     display: flex;
     flex-wrap: wrap;
