--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -1,3 +1,4 @@
+@import '../variables';
 @import '../styles';
 @import 'modes/treemode/json-node-selected-mixin.scss';
 
@@ -6,7 +7,7 @@
   height: 100%;
   min-width: 0;
   min-height: 150px;
-  border: 1px solid $theme-color;
+  border: 1px solid var(--jse-menu-color);
   position: relative;
   display: flex;
   flex-direction: row;
