--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -3,8 +3,7 @@
 
 // for key and value
 div.jse-editable-div {
-  line-height: $line-height;
-  min-width: 16px;
+  min-width: 2em;
   padding: 0 $input-padding;
   box-sizing: border-box;
   outline: none;
@@ -20,8 +19,8 @@ div.jse-editable-div {
   }
 
   &[contenteditable='true'] {
-    outline: 2px solid $edit-border-color;
-    background: $white !important;
+    outline: var(--jse-edit-outline);
+    background: inherit !important;
     position: relative;
     border-radius: 0;
     z-index: 3; // must be on top of hovering the entry below it
