--- a/src/lib/components/controls/Menu.scss
+++ b/src/lib/components/controls/Menu.scss
@@ -3,9 +3,9 @@
 .jse-menu {
   font-family: $font-family;
   font-size: $font-size;
-  background: $theme-color;
-  border-bottom: 1px solid $theme-color;
-  color: $white;
+  background: var(--jse-menu-color);
+  border-bottom: 1px solid var(--jse-menu-color);
+  color: var(--jse-menu-text-color);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -17,7 +17,7 @@
     height: $menu-button-size;
     border: none;
     background: transparent;
-    color: white;
+    color: inherit;
     cursor: pointer;
     padding: $padding-half;
     margin: 0;
@@ -25,16 +25,18 @@
 
     &:hover,
     &:focus {
-      background: rgba(255, 255, 255, 0.3);
+      background: var(--jse-menu-color-light);
     }
 
     &:disabled {
-      color: rgba(255, 255, 255, 0.5);
+      color: var(--jse-menu-text-color);
+      opacity: 0.5;
+
       background: transparent;
     }
 
     &.jse-group-button {
-      $group-button-color: $white;
+      $group-button-color: var(--jse-menu-text-color);
 
       border: 1px solid $group-button-color;
       &:not(.jse-last) {
@@ -56,12 +58,12 @@
 
       &:hover,
       &:focus {
-        background: rgba(255, 255, 255, 0.3);
+        background: var(--jse-menu-color-light);
       }
 
       &.jse-selected {
         background: $group-button-color;
-        color: $theme-color;
+        color: var(--jse-menu-color);
       }
     }
   }
@@ -73,7 +75,8 @@
   .jse-separator {
     $margin: 3px;
 
-    background: rgba(255, 255, 255, 0.15);
+    background: var(--jse-menu-text-color);
+    opacity: 0.3;
     box-sizing: border-box;
     width: 1px;
     height: $menu-button-size - 2 * $margin;
