--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -6,7 +6,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    color: $dark-gray;
+    color: inherit;
     min-height: 0;
     padding: 0;
 
@@ -136,37 +136,38 @@
 
   :global(.jse-tree-mode) {
     flex: 1;
-    border: 1px solid $background-gray;
+    border: var(--jse-input-border-readonly);
     box-shadow: none;
     box-sizing: border-box;
   }
 
   :global(.jse-tree-mode.jse-focus) {
-    border: 1px solid $theme-color;
+    border: var(--jse-input-border-focus);
   }
 
   input,
   textarea {
-    border: 1px solid $border-gray;
+    border: var(--jse-input-border);
     outline: none;
     box-sizing: border-box;
     padding: $padding-half;
     font-family: $font-family-mono;
     font-size: $font-size-mono;
-    color: $black;
+    color: inherit;
+    background: none;
 
     &:focus {
-      border-color: $theme-color;
+      border: var(--jse-input-border-focus);
     }
 
     &:read-only {
-      border-color: $background-gray;
+      border: var(--jse-input-border-readonly);
     }
   }
 
   .jse-preview.jse-error {
     flex: 1;
-    border: 1px solid $background-gray;
+    border: 1px solid var(--jse-input-border-readonly);
     color: $red;
     padding: $padding-half;
   }
