--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background: $white;
+  background: var(--jse-background-color);
   min-width: 0;
   min-height: 0;
 
@@ -45,7 +45,6 @@
   .jse-contents {
     flex: 1;
     overflow: auto;
-    background: $contents-background;
     position: relative;
     padding: $contents-padding;
     display: flex;
