--- a/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -5,16 +5,14 @@
 
   font-family: $font-family;
   font-size: $font-size;
-  background: $dark-gray;
-  color: $white;
-
-  $gray-highlight: lighten($dark-gray, 5%);
+  background: var(--jse-context-menu-background);
+  color: var(--jse-context-menu-text-color);
 
   button {
     @include jsoneditor-button;
 
     &:focus {
-      background: $gray-highlight;
+      background: var(--jse-context-menu-background-highlight);
     }
   }
 
@@ -28,7 +26,8 @@
       flex: 1;
       white-space: nowrap;
       padding: $padding;
-      color: $gray;
+      color: var(--jse-context-menu-text-color-disabled);
+      line-height: normal;
     }
 
     button {
@@ -38,11 +37,11 @@
       color: inherit;
 
       &:hover {
-        background: $gray-highlight;
+        background: var(--jse-context-menu-background-highlight);
       }
 
       &:disabled {
-        color: $gray;
+        color: var(--jse-context-menu-text-color-disabled);
         background: unset;
       }
 
@@ -56,6 +55,7 @@
 
         font-family: $font-family-mono;
         font-weight: bold;
+        font-size: 16px;
 
         .jse-quote,
         .jse-plus {
@@ -75,7 +75,7 @@
     align-items: stretch;
 
     &:not(:last-child) {
-      border-right: 1px solid $gray-highlight;
+      border-right: 1px solid var(--jse-context-menu-separator-color);
     }
 
     button {
@@ -87,6 +87,6 @@
   .jse-separator {
     width: 100%;
     height: 1px;
-    background: $gray-highlight;
+    background: var(--jse-context-menu-separator-color);
   }
 }
