--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,23 +1,19 @@
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-  'Helvetica Neue', sans-serif;
-// "consolas" for Windows, "menlo" for Mac with fallback to "monaco", 'Ubuntu Mono' for Ubuntu
-// (at Mac this font looks too large at 14px, but 13px is too small for the font on Windows)
-$font-family-mono: consolas, menlo, monaco, 'Ubuntu Mono', 'source-code-pro', monospace !default;
-$font-size-mono: 14px;
-$font-size: 16px;
-$font-size-small: 13px;
-$font-size-smallest: 11px;
+$font-family: var(--jse-font-family);
+$font-size: var(--jse-font-size);
+$font-size-small: var(--jse-font-size-small);
+$font-size-smallest: var(--jse-font-size-smallest);
+
+$font-family-mono: var(--jse-font-family-mono) !default;
+$font-size-mono: var(--jse-font-size-mono);
 
 $white: #fff;
 $black: #1a1a1a;
 $red: #ee5341;
 $green: #9ac45d;
 $contentsMinHeight: 150px;
-$theme-color: #3883fa;
-$theme-color-light: lighten($theme-color, 5%);
-$floating-menu-background: #4d4d4d;
-$floating-menu-color: #fff;
-$selected-color: #ffe665;
+$theme-color: var(--jse-menu-color);
+$theme-color-light: var(--jse-menu-color-light);
+
 $highlight-color: #ffe665;
 $highlight-hover-color: #f0f000;
 $highlight-active-color: #ffd700;
@@ -27,27 +23,26 @@ $error-background-color: #ffef8b;
 $error-border-color: #ffd700;
 $dark-gray: #656565;
 $gray: rgb(157, 157, 157); // #9d9d9d
-$gray-transparent: rgba(0, 0, 0, 0.38); // #9d9d9d but with transparency
-$middle-gray: #d3d3d3; // #d3d3d3
 $light-gray: rgb(192, 192, 192);
 $very-light-gray: #ebebeb;
 $light-gray-transparent: rgba(0, 0, 0, 0.25);
 
-$value-color-string: #008000;
-$value-color-number: #ee422e;
-$value-color-boolean: #ff8c00;
-$value-color-null: #004ed0;
-$value-color-url: $value-color-string;
+$jse-menu-background-color: var(--jse-menu-color);
 
-$contents-background: $white;
-$selection-background: $middle-gray;
+$value-color-string: var(--jse-value-color-string);
+$value-color-number: var(--jse-value-color-number);
+$value-color-boolean: var(--jse-value-color-boolean);
+$value-color-null: var(--jse-value-color-null);
+$value-color-url: var(--jse-value-color-url);
+
+$selection-background: var(--jse-selection-background-color);
 $selection-color: $black;
 $hovered-background: rgb(240, 240, 240); // #f0f0f0
 $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
 $background-gray: #f5f5f5;
 $background-light-gray-transparent: rgba(0, 0, 0, 0.06);
 $border-gray: #d8dbdf;
-$meta-color: $gray-transparent;
+$meta-color: var(--jse-meta-color);
 $edit-border-color: $dark-gray;
 
 $line-height: 18px;
@@ -70,7 +65,7 @@ $context-menu-button-size: 18px;
 $errors-overview-max-height: 25%;
 
 $box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
-$outline-shadow: 0 0 10px 0 rgba(56, 131, 250, 0.8);
+$outline-shadow: 0 0 10px 0 $theme-color-light;
 
 @mixin jsoneditor-button {
   border: none;
@@ -86,16 +81,16 @@ $outline-shadow: 0 0 10px 0 rgba(56, 131, 250, 0.8);
 @mixin jsoneditor-button-primary {
   @include jsoneditor-button;
 
-  background: $theme-color;
-  color: $white;
+  background: var(--jse-button-primary-background);
+  color: var(--jse-button-primary-text-color);
   padding: $padding 2 * $padding;
   border-radius: $border-radius;
 
   &:hover {
-    background: lighten($theme-color, 7%);
+    background: var(--jse-button-primary-background-highlight);
   }
 
   &:disabled {
-    background: $gray;
+    background: var(--jse-button-primary-background-disabled);
   }
 }
